# data-lens

./: .env.example  .gitignore  LICENSE  Makefile  README.md  pyproject.toml  server.py
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
data_lens/: __init__.py
data_lens/config/: __init__.py  settings.py
data_lens/database/: __init__.py  connection.py  utils.py
data_lens/mcp/: __init__.py  mcp.py
data_lens/mcp/middleware/: __init__.py  tag_middleware.py
data_lens/mcp/prompts/: __init__.py  report_prompts.py
data_lens/mcp/resources/: __init__.py  database_resources.py
data_lens/mcp/tools/: __init__.py  elicit.py  mysql.py  progress_tool.py  visualization.py
data_lens/utils/: __init__.py  logger.py
